# python_template

./: .flake8  .pre-commit-config.yaml  pyproject.toml  requirements.txt  tox.ini
llm_platform/app/: README.md  app.py
llm_platform/bot/: README.md  base.py  pyproject.toml
llm_platform/bot/base_tool/: bot.py
llm_platform/common/: logger.py
src/app/: README.md
tests/: test_base_tool.py
tests/requests/: server.py
