[tool.poetry]
name = "llm-platform"
version = "0.1.0"
description = ""
authors = ["Guangyu Zhao <guangyuzhao@hillstonenet.com>"]
readme = "README.md"
packages = [{include = "src"}]
classifiers = ["Private :: Not a Public Package"]

[tool.poetry.dependencies]
# support >=3.9 for generics
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
pre-commit = "^3.7.0"

[tool.ruff]
target-version = "py311"
exclude = [
    "deployment",
]
lint.ignore = [
    "COM812",  # Too aggressive
    "D212",  # Using D213
    "D417",  # Too aggressive
    "F541",  # Messes with prompts.py
    "TCH002",
    "UP006",  # Messes with pydantic
    "UP007",  # Wants | over Union, which breaks 3.8
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
